k8s/mssql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
  labels:
    app: mssql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": windows # Run on a Windows Node
      containers:
      - name: mssql
        image: avivasolutionsnl.azurecr.io/sitecore-xc-mssql:9.1.0-20190904
        ports:
          - containerPort: 1433
        volumeMounts:
          - mountPath: "/Data"
            name: volume
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: mssql-managed-disk
---
apiVersion: v1
kind: Service
metadata:
  name: mssql
spec:
  ports:
  - protocol: TCP
    port: 1433
  selector:
    app: mssql
